<resources>
    <string name="app_name">MovieDB_31</string>
    <string name="categories">categories</string>
    <string name="show_more">Show More</string>
    <string name="top_rate">Top Rate</string>
    <string name="movie_name">Movie Name</string>
    <string name="popular">Popular</string>
    <string name="up_coming">Up Coming</string>
    <string name="now_playing">Now Playing</string>
    <string name="watch_trailer">WatchTrailer</string>
    <string name="actor">Actor</string>
    <string name="production">Production</string>
    <string name="genres">Genres</string>
    <string name="favorite">Favorite</string>
    <string name="movie_menu">Movie Menu</string>
    <string name="search">Search</string>
</resources>
