<?xml version="1.0" encoding="utf-8"?>

<layout>
    <data>
        <variable
            name="mainviewmodel"
            type="com.framgia.moviedb_31.screen.home.MainViewModel"
            />
    </data>
    <android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        >
        <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".screen.home.HomeScreenActivity"
            >
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <android.support.v4.view.ViewPager
                    android:id="@+id/view_slide"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_200"
                    app:layout_constraintBottom_toTopOf="@id/text_show_more_top_rate"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_10"
                    android:text="@string/top_rate"
                    android:textSize="@dimen/sp_15"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view_slide"
                    />
                <TextView
                    android:id="@+id/text_show_more_top_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_10"
                    android:text="@string/show_more"
                    android:textSize="@dimen/sp_15"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view_slide"
                    />
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_top_rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:Adapter="@{mainviewmodel.adapterTopRated}"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/text_show_more_top_rate"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_10"
                    android:text="@string/popular"
                    android:textSize="@dimen/sp_15"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recycler_top_rate"
                    />
                <TextView
                    android:id="@+id/text_show_more_popular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_10"
                    android:text="@string/show_more"
                    android:textSize="@dimen/sp_15"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recycler_top_rate"
                    />
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_popular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:Adapter="@{mainviewmodel.adapterPopular}"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/text_show_more_popular"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_10"
                    android:text="@string/up_coming"
                    android:textSize="@dimen/sp_15"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recycler_popular"
                    />
                <TextView
                    android:id="@+id/text_show_more_up_coming"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_10"
                    android:text="@string/show_more"
                    android:textSize="@dimen/sp_15"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recycler_popular"
                    />
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_up_coming"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:Adapter="@{mainviewmodel.adapterUpComing}"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/text_show_more_up_coming"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_10"
                    android:text="@string/now_playing"
                    android:textSize="@dimen/sp_15"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recycler_up_coming"
                    />
                <TextView
                    android:id="@+id/text_show_more_now_playing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_10"
                    android:text="@string/show_more"
                    android:textSize="@dimen/sp_15"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recycler_up_coming"
                    />
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_now_playing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:Adapter="@{mainviewmodel.adapterNowPlaying}"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/text_show_more_now_playing"
                    />
            </android.support.constraint.ConstraintLayout>
        </ScrollView>
        <android.support.design.widget.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/navigation_header"
            app:menu="@menu/navigation_menu"
            />
    </android.support.v4.widget.DrawerLayout>
</layout>
