<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screen.movieDetail.MovieDetailActivity"
    >
    <data>
        <variable
            name="viewModel"
            type="com.framgia.moviedb_31.screen.movieDetail.MovieDetailViewModel"
            />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundItem"
        >
        <android.support.constraint.ConstraintLayout
            android:id="@+id/layoutContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeMovie"
            >
            <ImageView
                android:id="@+id/imageViewPoster"
                android:layout_width="@dimen/dp_160"
                android:layout_height="@dimen/dp_200"
                android:src="@drawable/poster2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                setImagePoster="@{viewModel.movie.poster}"
                />
            <TextView
                android:id="@+id/textViewNameMovie"
                android:layout_width="@dimen/dp_190"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_10"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@={viewModel.movie.nameMovie}"
                android:textSize="@dimen/sp_25"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/imageViewPoster"
                app:layout_constraintTop_toTopOf="parent"
                />
            <ImageView
                android:id="@+id/imageViewRating"
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_20"
                android:src="@drawable/ic_star"
                app:layout_constraintLeft_toRightOf="@id/imageViewPoster"
                app:layout_constraintTop_toBottomOf="@id/textViewNameMovie"
                />
            <TextView
                android:id="@+id/textViewRating"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_20"
                android:gravity="center"
                android:paddingLeft="@dimen/dp_5"
                android:text="@{viewModel.movie.rating}"
                android:textSize="@dimen/sp_25"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@id/imageViewRating"
                app:layout_constraintTop_toBottomOf="@id/textViewNameMovie"
                />
            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="@dimen/dp_150"
                android:layout_height="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_10"
                android:gravity="center_vertical"
                android:text="@{viewModel.movie.date}"
                android:textSize="@dimen/sp_20"
                app:layout_constraintLeft_toRightOf="@id/imageViewPoster"
                app:layout_constraintTop_toBottomOf="@id/imageViewRating"
                />
            <ImageView
                android:id="@+id/imageViewFavorite"
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_15"
                android:src="@drawable/ic_heart"
                app:layout_constraintLeft_toRightOf="@id/imageViewPoster"
                app:layout_constraintTop_toBottomOf="@id/textViewDate"
                />
            <TextView
                android:id="@+id/textViewTrailer"
                android:layout_width="@dimen/dp_150"
                android:layout_height="@dimen/dp_30"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_25"
                android:gravity="center_vertical"
                android:onClick="@{viewModel::onItemClicked}"
                android:text="@string/watch_trailer"
                android:textSize="@dimen/sp_20"
                android:textStyle="italic"
                app:layout_constraintLeft_toRightOf="@id/imageViewFavorite"
                app:layout_constraintTop_toBottomOf="@id/textViewDate"
                />
            <TextView
                android:id="@+id/textViewContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@{viewModel.movie.content}"
                android:textSize="@dimen/sp_18"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageViewPoster"
                />
            <TextView
                android:id="@+id/textViewActor"
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_30"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_20"
                android:gravity="center_vertical"
                android:text="@string/actor"
                android:textSize="@dimen/sp_25"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewContent"
                />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewActor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:orientation="horizontal"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewActor"
                app:setAdapter="@{viewModel.movieDetailActorAdapter}"
                />
            <TextView
                android:id="@+id/textViewProduction"
                android:layout_width="@dimen/dp_150"
                android:layout_height="@dimen/dp_30"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:gravity="center_vertical"
                android:text="@string/production"
                android:textSize="@dimen/sp_25"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recyclerViewActor"
                />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewProducer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:orientation="horizontal"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewProduction"
                app:setAdapter="@{viewModel.movieDetailProductionAdapter}"
                />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>
